Fixed picture alignment and added spacing above Work Experience section

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -36,3 +36,8 @@
     text-align: center;
     margin: 10px 0;
 }
+
+img.selfie {
+    float: left;
+    padding-right: 15px;
+}
